+++++++++++
Python News
+++++++++++

What's New in Python 3.3.6 release candidate 1?
===============================================

*Release date: XX-XXX-XXXX*

Core and Builtins
-----------------

Library
-------

- Issue #20875: Prevent possible gzip "'read' is not defined" NameError.
  Patch by Claudiu Popa.

- Issue #4931: distutils should not produce unhelpful "error: None" messages
  anymore.  distutils.util.grok_environment_error is kept but doc-deprecated.

- Issue #20283: RE pattern methods now accept the string keyword parameters
  as documented.  The pattern and source keyword parameters are left as
  deprecated aliases.


What's New in Python 3.3.5?
===========================

*Release date: 09-Mar-2014*

No changes from release candidate 2.


What's New in Python 3.3.5 release candidate 2?
===============================================

*Release date: 02-Mar-2014*

Core and Builtins
-----------------

- Issue #20731: Properly position in source code files even if they
  are opened in text mode. Patch by Serhiy Storchaka.

- Issue #19619: str.encode, bytes.decode and bytearray.decode now use an
  internal API to throw LookupError for known non-text encodings, rather
  than attempting the encoding or decoding operation and then throwing a
  TypeError for an unexpected output type. (The latter mechanism remains
  in place for third party non-text encodings)

Library
-------

- Issue #20778: Fix modulefinder to work with bytecode-only modules.

- Issue #20791: copy.copy() now doesn't make a copy when the input is
  a bytes object.  Initial patch by Peter Otten.

- Issue #20621: Fixes a zipimport bug introduced in 3.3.4 that could cause
  spurious crashes or SystemErrors when importing modules or packages from a
  zip file.  The change causing the problem was reverted.

- Issue #20404: io.TextIOWrapper (and hence the open() builtin) now uses the
  internal codec marking system added for issue #19619 to throw LookupError